Rename notebooks, and implement previous edits across all notebooks
(cherry picked from commit 907b6370c5ac435cb255b780fc795ad5c14932e7)

--- a/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
+++ b/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><div style=\"width:300px\">![photutils logo](photutils_banner.svg)</div></center>\n",
+    "<a id=\"title_ID\"></a>\n",
+    "\n",
+    "[\n",
+    "<img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300>\n",
+    "](http://photutils.readthedocs.io/en/stable/index.html)\n",
     "\n",
     "# Background Estimation with `photutils`\n",
     "---"
@@ -29,16 +33,24 @@
     "\n",
     "Background subtraction is essential for accurate photometric analysis of astronomical data like the XDF.\n",
     "\n",
-    "##### The methods demonstrated here are available in narrative form within the `photutils.background` [documentation](http://photutils.readthedocs.io/en/stable/background.html)."
+    "*The methods demonstrated here are available in narrative form within the `photutils.background` [documentation](http://photutils.readthedocs.io/en/stable/background.html).*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\">**Note:** This notebook focuses on global background estimation. Local background subtraction with <b>annulus apertures</b> is demonstrated in the [aperture photometry notebook](03_photutils_aperture_photometry.ipynb).</div>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "\n",
-    "<div class=\"alert alert-block alert-warning\">**Important:** Before proceeding, please be sure to update your versions of `astropy`, `matplotlib`, and `photutils`, or this notebook may not work properly. Or, if you don't want to handle packages individually, you can always use (and keep updated!) the [AstroConda](https://astroconda.readthedocs.io) distribution.</div>\n",
+    "**Note:** This notebook focuses on global background estimation. Local background subtraction with **annulus apertures** is demonstrated in the [aperture photometry notebook](../03_aperture_photometry/03_aperture_photometry.ipynb).\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "    \n",
+    " **Important:** Before proceeding, please be sure to update your versions of `astropy`, `matplotlib`, and `photutils`, or this notebook may not work properly. Or, if you don't want to handle packages individually, you can always use (and keep updated!) the [AstroConda](https://astroconda.readthedocs.io) distribution.\n",
+    " \n",
+    "</div>\n",
     "\n",
     "---"
    ]
@@ -73,14 +85,14 @@
     "from matplotlib.ticker import LogLocator\n",
     "\n",
     "# Show plots in the notebook\n",
-    "% matplotlib inline"
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's also define some `matplotlib` parameters, such as title font size and the dpi, to make sure our plots look nice. To make it quick, we'll do this by loading a [shared style file](photutils_notebook_style.mplstyle) into `pyplot`. We will use this style file for all the notebook tutorials. (See [here](https://matplotlib.org/users/customizing.html) to learn more about customizing `matplotlib`.)"
+    "Let's also define some `matplotlib` parameters, such as title font size and the dpi, to make sure our plots look nice. To make it quick, we'll do this by loading a [style file shared with the other photutils tutorials](../photutils_notebook_style.mplstyle) into `pyplot`. We will use this style file for all the notebook tutorials. (See [here](https://matplotlib.org/users/customizing.html) to learn more about customizing `matplotlib`.)"
    ]
   },
   {
@@ -89,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.style.use('photutils_notebook_style.mplstyle')"
+    "plt.style.use('../photutils_notebook_style.mplstyle')"
    ]
   },
   {
@@ -105,7 +117,7 @@
    "source": [
     "As described in the introduction, we will be using Hubble eXtreme Deep Field (XDF) data. Since this file is too large to store on GitHub, we will just use `astropy` to directly download the file from the STScI archive: https://archive.stsci.edu/prepds/xdf/ \n",
     "\n",
-    "(Generally, the best package for web queries of astronomical data is `astroquery`; however, the dataset we are using is a High Level Science Product (HLSP) and thus is not located within a catalog that could be queried with `astroquery`.)"
+    "(Generally, the best package for web queries of astronomical data is [Astroquery](https://astroquery.readthedocs.io/en/latest/); however, the dataset we are using is a High Level Science Product (HLSP) and thus is not located within a catalog that could be queried with Astroquery.)"
    ]
   },
   {
@@ -183,10 +195,17 @@
     "# Set up the figure with subplots\n",
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
-    "# Plot the data\n",
-    "norm_image = ImageNormalize(vmin=1e-4, vmax=5e-2, stretch=LogStretch())\n",
+    "# Set up the normalization and colormap\n",
+    "norm_image = ImageNormalize(vmin=1e-4, vmax=5e-2, stretch=LogStretch(), clip=False)\n",
+    "cmap = plt.get_cmap('viridis')\n",
+    "cmap.set_over(cmap.colors[-1])\n",
+    "cmap.set_under(cmap.colors[0])\n",
+    "cmap.set_bad('white') # Show masked data as white\n",
     "xdf_image_clipped = np.clip(xdf_image, 1e-4, None) # clip to plot with logarithmic stretch\n",
-    "fitsplot = ax1.imshow(xdf_image_clipped, norm=norm_image)\n",
+    "\n",
+    "# Plot the data\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), \n",
+    "                      norm=norm_image, cmap=cmap)\n",
     "\n",
     "# Define the colorbar and fix the labels\n",
     "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
@@ -194,7 +213,8 @@
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
     "# Define labels\n",
-    "cbar.set_label(r'Flux Count Rate ($e^{-1}/s$)', rotation=270, labelpad=30)\n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')"
    ]
@@ -203,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Note: Double-click on any inline plot to zoom in.*"
+    "*Tip: Double-click on any inline plot to zoom in.*"
    ]
   },
   {
@@ -219,7 +239,7 @@
    "source": [
     "You probably noticed that a large portion of the data is equal to zero. The data we are using is a reduced mosaic that combines many different exposures, and that has been rotated such that not all of the array holds data. \n",
     "\n",
-    "We want to **mask** out the non-data, so all of those pixels that have a value of zero don't interfere with our statistics and analyses of the data."
+    "We want to **mask** out the non-data portions of the image array,, so all of those pixels that have a value of zero don't interfere with our statistics and analyses of the data."
    ]
   },
   {
@@ -251,15 +271,16 @@
     "ax1.set_title('Mask')\n",
     "\n",
     "# Plot the masked data\n",
-    "norm_image = ImageNormalize(vmin=1e-4, vmax=5e-2, stretch=LogStretch())\n",
-    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), norm=norm_image)\n",
+    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), \n",
+    "                      norm=norm_image, cmap=cmap)\n",
     "\n",
     "# Define the colorbar and fix the labels\n",
     "cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
     "cbar = fig.colorbar(fitsplot, cbar_ax, ticks=LogLocator(subs=range(10)))\n",
     "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
     "cbar.ax.set_yticklabels(labels)\n",
-    "cbar.set_label(r'Flux Count Rate ($e^{-1}/s$)', rotation=270, labelpad=30)\n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "               rotation=270, labelpad=30)\n",
     "ax2.set_xlabel('X (pixels)')\n",
     "ax2.set_title('Masked Data')"
    ]
@@ -288,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean, median, std = sigma_clipped_stats(xdf_image.data, sigma=3.0, iters=5, mask=xdf_image.mask)"
+    "mean, median, std = sigma_clipped_stats(xdf_image.data, sigma=3.0, maxiters=5, mask=xdf_image.mask)"
    ]
   },
   {
@@ -305,7 +326,7 @@
    "outputs": [],
    "source": [
     "# Calculate the data without masking\n",
-    "stats_nomask = sigma_clipped_stats(xdf_image.data, sigma=3.0, iters=5)"
+    "stats_nomask = sigma_clipped_stats(xdf_image.data, sigma=3.0, maxiters=5)"
    ]
   },
   {
@@ -329,7 +350,7 @@
     "ax1.axvline(np.average(xdf_image), label='Neither', c='C6', ls=':', lw=3)\n",
     "\n",
     "ax1.set_xlim(flux_range)\n",
-    "ax1.set_xlabel(r'Flux Count Rate ($e^{-1}/s$)', fontsize=14)\n",
+    "ax1.set_xlabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), fontsize=14)\n",
     "ax1.set_ylabel('Frequency', fontsize=14)\n",
     "ax1.set_title('Effect of Sigma-Clipping and Masking on Mean', fontsize=16)\n",
     "ax1.legend(fontsize=11)\n",
@@ -343,7 +364,7 @@
     "ax2.axvline(np.ma.median(xdf_image), label='Neither', c='C6', ls=':', lw=3)\n",
     "\n",
     "ax2.set_xlim(flux_range)\n",
-    "ax2.set_xlabel(r'Flux Count Rate ($e^{-1}/s$)', fontsize=14)\n",
+    "ax2.set_xlabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), fontsize=14)\n",
     "ax2.set_title('Effect of Sigma-Clipping and Masking on Median', fontsize=16)\n",
     "ax2.legend(fontsize=11)"
    ]
@@ -377,10 +398,6 @@
     "fig, [ax1, ax2] = plt.subplots(1, 2, figsize=(12, 6), sharey=True)\n",
     "plt.tight_layout()\n",
     "\n",
-    "# Define the normalization\n",
-    "norm_image = ImageNormalize(vmin=1e-4, vmax=5e-2, stretch=LogStretch())\n",
-    "xdf_scalar_bkgdsub_clipped = np.clip(xdf_scalar_bkgdsub, 1e-4, None) # clip to plot with logarithmic stretch\n",
-    "\n",
     "# Plot the original data\n",
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), norm=norm_image)\n",
     "ax1.set_xlabel('X (pixels)')\n",
@@ -388,6 +405,7 @@
     "ax1.set_title('Original Data')\n",
     "\n",
     "# Plot the subtracted data\n",
+    "xdf_scalar_bkgdsub_clipped = np.clip(xdf_scalar_bkgdsub, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "fitsplot = ax2.imshow(np.ma.masked_where(xdf_scalar_bkgdsub.mask, xdf_scalar_bkgdsub_clipped), norm=norm_image)\n",
     "ax2.set_xlabel('X (pixels)')\n",
     "ax2.set_title('Scalar Background-Subtracted Data')\n",
@@ -397,7 +415,8 @@
     "cbar = fig.colorbar(fitsplot, cbar_ax, ticks=LogLocator(subs=range(10)))\n",
     "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
     "cbar.ax.set_yticklabels(labels)\n",
-    "cbar.set_label(r'Flux Count Rate ($e^{-1}/s$)', rotation=270, labelpad=30)"
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "               rotation=270, labelpad=30)"
    ]
   },
   {
@@ -414,10 +433,13 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "<h3>**Exercises:**</h3><br>\n",
+    "    \n",
+    "<h3>Exercises:</h3><br>\n",
+    "\n",
     "Perform a median scalar background subtraction on our sigma-clipped data. Plot it and visually inspect it. How does it compare to the original data?\n",
     "<br><br>\n",
     "Compare the median background subtraction to the mean background subtraction. Which is better?\n",
+    "\n",
     "</div>"
    ]
   },
@@ -480,7 +502,6 @@
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
     "# Plot the data\n",
-    "norm_image = ImageNormalize(vmin=1e-4, vmax=5e-2, stretch=LogStretch())\n",
     "background_clipped = np.clip(bkg.background, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, background_clipped), norm=norm_image)\n",
     "\n",
@@ -493,7 +514,8 @@
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
     "# Define labels\n",
-    "cbar.set_label(r'Flux Count Rate ($e^{-1}/s$)', rotation=270, labelpad=30)\n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
     "ax1.set_title('2D Estimated Background')"
@@ -529,12 +551,12 @@
     "plt.tight_layout()\n",
     "\n",
     "# Define the normalization\n",
-    "norm_image = ImageNormalize(vmin=1e-4, vmax=5e-2, stretch=LogStretch())\n",
     "xdf_2d_bkgdsub_clipped = np.clip(xdf_2d_bkgdsub, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "\n",
     "# Plot the scalar-subtracted data\n",
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_scalar_bkgdsub.mask, xdf_scalar_bkgdsub_clipped), norm=norm_image)\n",
-    "cbar.set_label(r'Flux Count Rate ($e^{-1}/s$)', rotation=270, labelpad=30)\n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "               rotation=270, labelpad=30)\n",
     "ax1.set_ylabel('Y (pixels)')\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_title('Scalar Background-Subtracted Data')\n",
@@ -549,7 +571,8 @@
     "cbar = fig.colorbar(fitsplot, cbar_ax, ticks=LogLocator(subs=range(10)))\n",
     "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
     "cbar.ax.set_yticklabels(labels)\n",
-    "cbar.set_label(r'Flux Count Rate ($e^{-1}/s$)', rotation=270, labelpad=30)"
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "               rotation=270, labelpad=30)"
    ]
   },
   {
@@ -564,10 +587,13 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "<h3>**Exercises:**</h3><br>\n",
+    "    \n",
+    "<h3>Exercises:</h3><br>\n",
+    "\n",
     "Calculate the standard deviation (with sigma-clipping and masking!) for the original data, the scalar background-subtracted data, and the 2D background-subtracted data. How do the values compare? Which has the smallest standard deviation?<br><br>\n",
     "\n",
     "Notice that the difference between each dataset's standard deviation is small - why might this be?\n",
+    "\n",
     "</div>"
    ]
   },
@@ -575,11 +601,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "## Conclusions\n",
     "\n",
     "The `photutils` package provides a powerful tool in the `Background2D` class, allowing users to easily estimate and subtract spatially variant background signals from their data.\n",
     "\n",
-    "**To continue with this `photutils` tutorial, go on to the [source detection notebook](02_photutils_source_detection.ipynb).**"
+    "**To continue with this `photutils` tutorial, go on to the [source detection notebook](../02_source_detection/02_source_detection.ipynb).**"
    ]
   },
   {
@@ -587,11 +614,26 @@
    "metadata": {},
    "source": [
     "---\n",
-    "<i>September 2018\n",
-    "\n",
-    "Author: Lauren Chambers (lchambers@stsci.edu), Erik Tollerud (etollerud@stsci.edu)\n",
-    "\n",
-    "For more examples and details, please visit the [photutils](http://photutils.readthedocs.io/en/stable/index.html) documentation.</i>"
+    "## Additional Resources\n",
+    "For more examples and details, please visit the [photutils](http://photutils.readthedocs.io/en/stable/index.html) documentation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## About this Notebook\n",
+    "**Authors:** Lauren Chambers (lchambers@stsci.edu), Erik Tollerud (etollerud@stsci.edu)\n",
+    "<br>**Updated:** May 2019"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Top of Page](#title_ID)\n",
+    "<img style=\"float: right;\" src=\"https://raw.githubusercontent.com/spacetelescope/notebooks/master/assets/stsci_pri_combo_mark_horizonal_white_bkgd.png\" alt=\"STScI logo\" width=\"200px\"/>"
    ]
   }
  ],
@@ -611,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
