--- a/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
+++ b/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
@@ -35,7 +35,7 @@
     "##### Which data are used in this tutorial?\n",
     "We will be manipulating Hubble eXtreme Deep Field (XDF) data, which was collected using the Advanced Camera for Surveys (ACS) on Hubble between 2002 and 2012. The image we use here is the result of 1.8 million seconds (500 hours!) of exposure time, and includes some of the faintest and most distant galaxies that have ever been observed. \n",
     "\n",
-    "##### The methods demonstrated here are available in narrative form within the `photutils.aperture` [documentation](http://photutils.readthedocs.io/en/stable/aperture.html)."
+    "*The methods demonstrated here are available in narrative form within the `photutils.aperture` [documentation]( http://photutils.readthedocs.io/en/stable/aperture.html).*"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's also define some `matplotlib` parameters, such as title font size and the dpi, to make sure our plots look nice. To make it quick, we'll do this by loading a [shared style file](photutils_notebook_style.mplstyle) into `pyplot`. We will use this style file for all the notebook tutorials. (See [here](https://matplotlib.org/users/customizing.html) to learn more about customizing `matplotlib`.)"
+    "Let's also define some `matplotlib` parameters, such as title font size and the dpi, to make sure our plots look nice. To make it quick, we'll do this by loading a [style file shared with the other photutils tutorials](../photutils_notebook_style.mplstyle) into `pyplot`. We will use this style file for all the notebook tutorials. (See [here](https://matplotlib.org/users/customizing.html) to learn more about customizing `matplotlib`.)"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.style.use('photutils_notebook_style.mplstyle')"
+    "plt.style.use('../photutils_notebook_style.mplstyle')"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "source": [
     "As described in the introduction, we will be using Hubble eXtreme Deep Field (XDF) data. Since this file is too large to store on GitHub, we will just use `astropy` to directly download the file from the STScI archive: https://archive.stsci.edu/prepds/xdf/ \n",
     "\n",
-    "(Generally, the best package for web queries of astronomical data is `astroquery`; however, the dataset we are using is a High Level Science Product (HLSP) and thus is not located within a catalog that could be queried with `astroquery`.)"
+    "(Generally, the best package for web queries of astronomical data is [Astroquery](https://astroquery.readthedocs.io/en/latest/); however, the dataset we are using is a High Level Science Product (HLSP) and thus is not located within a catalog that could be queried with Astroquery.)"
    ]
   },
   {
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As explained in the [previous notebook](01_photutils_background_estimation.ipynb) on background estimation, it is important to **mask** these data, as a large portion of the values are equal to zero. We will mask out the non-data, so all of those pixels that have a value of zero don't interfere with our statistics and analyses of the data. "
+    "As explained in a [previous notebook](../01_background_estimation/01_background_estimation.ipynb) on background estimation, it is important to **mask** these data, as a large portion of the values are equal to zero. We will mask out the non-data portions of the image array, so all of those pixels that have a value of zero don't interfere with our statistics and analyses of the data. "
    ]
   },
   {
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unit = u.ct / u.s\n",
+    "unit = u.electron / u.s\n",
     "xdf_image = CCDData(data, unit=unit, meta=header, mask=mask)"
    ]
   },
@@ -182,10 +182,17 @@
     "# Set up the figure with subplots\n",
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
-    "# Plot the data\n",
-    "norm_image = ImageNormalize(vmin=1e-4, vmax=5e-2, stretch=LogStretch())\n",
+    "# Set up the normalization and colormap\n",
+    "norm_image = ImageNormalize(vmin=1e-4, vmax=5e-2, stretch=LogStretch(), clip=False)\n",
+    "cmap = plt.get_cmap('viridis')\n",
+    "cmap.set_over(cmap.colors[-1])\n",
+    "cmap.set_under(cmap.colors[0])\n",
+    "cmap.set_bad('white') # Show masked data as white\n",
     "xdf_image_clipped = np.clip(xdf_image, 1e-4, None) # clip to plot with logarithmic stretch\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), norm=norm_image)\n",
+    "\n",
+    "# Plot the data\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), \n",
+    "                      norm=norm_image, cmap=cmap)\n",
     "\n",
     "# Define the colorbar and fix the labels\n",
     "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
@@ -193,7 +200,8 @@
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
     "# Define labels\n",
-    "cbar.set_label(r'Flux Count Rate ($e^{-1}/s$)', rotation=270, labelpad=30)\n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')"
    ]
@@ -224,7 +232,7 @@
     "\n",
     "It is also possible for users to create custom aperture shapes.\n",
     "\n",
-    "Any aperture object is created by defining its position and size (and, if applicable, orientation). Let's use the `find_peaks` method that we learned about in a [previous notebook](02_photutils_source_detection.ipynb) to get the positions of sources in our data:"
+    "Any aperture object is created by defining its position and size (and, if applicable, orientation). Let's use the `find_peaks` method that we learned about in a [previous notebook](../02_source_detection/02_source_detection.ipynb) to get the positions of sources in our data:"
    ]
   },
   {
@@ -233,7 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils import find_peaks"
+    "from photutils import find_peaks\n",
+    "from photutils.centroids import centroid_2dg"
    ]
   },
   {
@@ -243,7 +252,7 @@
    "outputs": [],
    "source": [
     "# Calculate statistics\n",
-    "mean, median, std = sigma_clipped_stats(xdf_image.data, sigma=3.0, iters=5, mask=xdf_image.mask)"
+    "mean, median, std = sigma_clipped_stats(xdf_image.data, sigma=3.0, maxiters=5, mask=xdf_image.mask)"
    ]
   },
   {
@@ -253,7 +262,8 @@
    "outputs": [],
    "source": [
     "sources_findpeaks = find_peaks(xdf_image.data, mask=xdf_image.mask, \n",
-    "                               threshold=20.*std, box_size=30, subpixel=True)    \n",
+    "                               threshold=20.*std, box_size=30, \n",
+    "                               centroid_func=centroid_2dg)     \n",
     "# Display the table\n",
     "sources_findpeaks"
    ]
@@ -285,7 +295,8 @@
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
     "# Define labels\n",
-    "cbar.set_label(r'Flux Count Rate ($e^{-1}/s$)', rotation=270, labelpad=30)\n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
     "ax1.set_title('find\\_peaks Sources')"
@@ -342,7 +353,8 @@
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
     "# Define labels\n",
-    "cbar.set_label(r'Flux Count Rate ($e^{-1}/s$)', rotation=270, labelpad=30)\n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
     "ax1.set_title('Circular Apertures')\n",
@@ -382,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In a [previous notebook](02_photutils_source_detection.ipynb), we showed how you can use the `photutils.detect_sources` feature to generate segmentation maps, which identify and label contiguous (connected) objects within an image. Then, with `source_properties`, you can access descriptive properties for each unique object - not just their centroid positions, but also their pixel areas, eccentricities, orientations with respect to the coordinate frame of the image, and more.\n",
+    "In a [previous notebook](../02_source_detection/02_source_detection.ipynb), we showed how you can use the `photutils.detect_sources` [feature](https://photutils.readthedocs.io/en/stable/api/photutils.detect_sources.html) to generate segmentation maps, which identify and label contiguous (connected) objects within an image. Then, with `source_properties` [feature](https://photutils.readthedocs.io/en/stable/api/photutils.segmentation.source_properties.html?highlight=source_properties), you can access descriptive properties for each unique object - not just their centroid positions, but also their pixel areas, eccentricities, orientations with respect to the coordinate frame of the image, and more.\n",
     "\n",
     "Here we'll use the centroid, semimajor axis, semiminor axis, and orientation values from `source_properties` to generate elliptical apertures for each of the sources in our image."
    ]
@@ -450,7 +462,8 @@
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
     "# Define labels\n",
-    "cbar.set_label(r'Flux Count Rate ($e^{-1}/s$)', rotation=270, labelpad=30)\n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
     "ax1.set_title('Elliptical Apertures')\n",
@@ -607,7 +620,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `aperture_sum` value is what reports the number of counts within the aperture: 3.47 ct/s.\n",
+    "The `aperture_sum` value is what reports the number of electron counts within the aperture: 3.47 e<sup>–</sup>/s.\n",
     "\n",
     "And, just as a check, to make sure our sky apertures give basically the same answer..."
    ]
@@ -693,7 +706,7 @@
     "plt.yscale('log')\n",
     "plt.xscale('log')\n",
     "plt.title('Histogram of Source Photometry')\n",
-    "plt.xlabel('Count Rate [ct/s]')\n",
+    "plt.xlabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')))\n",
     "plt.ylabel('Number of Sources')"
    ]
   },
@@ -713,7 +726,7 @@
     "plt.xscale('log')\n",
     "plt.title('Count Rate v. Aperture Area')\n",
     "plt.xlabel('Aperture Area [pixels$^2$]')\n",
-    "plt.ylabel('Count Rate [ct/s]')"
+    "plt.xlabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')))"
    ]
   },
   {
@@ -745,7 +758,7 @@
     "\n",
     "## Local Background Subtraction\n",
     "\n",
-    "In the [background estimation notebook](01_photutils_background_estimation.ipynb), we explored how to perform global background subtraction of image data with `photutils`. However, you can also use `photutils` to perform local background estimations for aperture corrections.\n",
+    "In the [background estimation notebook](../01_background_estimation/01_background_estimation.ipynb), we explored how to perform global background subtraction of image data with `photutils`. However, you can also use `photutils` to perform local background estimations for aperture corrections.\n",
     "\n",
     "To estimate the local background for each aperture, measure the counts within annulus apertures around (but not including!) each source. In our example, we defined elliptical apertures with `r = 3` to measure the counts within each source. To calculate the background for each source, let's measure the counts elliptical annuli between `r = 3.5` and `r = 5`."
    ]
@@ -795,7 +808,8 @@
     "cbar.ax.set_yticklabels(labels)\n",
     "\n",
     "# Define labels\n",
-    "cbar.set_label(r'Flux Count Rate ($e^{-1}/s$)', rotation=270, labelpad=30)\n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), \n",
+    "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
     "ax1.set_title('Elliptical Annuli')\n",
@@ -848,13 +862,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You might have noticed that these background count rates are *really* small. In this case, this is to be expected - since our example XDF data is a high-level science product (HLSP) that already has already been background-subtracted."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -863,7 +870,7 @@
     "# Calculate the mean background level (per pixel) in the annuli \n",
     "bkg_area = [annulus.area() for annulus in elliptical_annuli]\n",
     "bkg_mean_per_aperture = bkg_phot_table['aperture_sum'].value / bkg_area\n",
-    "bkg_mean = np.average(bkg_mean_per_aperture) * (u.ct / u.s)\n",
+    "bkg_mean = np.average(bkg_mean_per_aperture) * (u.electron / u.s)\n",
     "print('Background mean:', bkg_mean)\n",
     "\n",
     "# Calculate the total background within each elliptical aperture\n",
@@ -874,6 +881,13 @@
     "\n",
     "# Add this as a column to the original photometry table\n",
     "phot_table['aperture_sum_bkgsub'] = flux_bkgsub"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You might have noticed that these background count rates are *really* small. In this case, this is to be expected - since our example XDF data is a high-level science product (HLSP) that already has already been background-subtracted."
    ]
   },
   {
@@ -910,7 +924,7 @@
     "plt.yscale('log')\n",
     "plt.xscale('log')\n",
     "plt.title('Histogram of Source Photometry')\n",
-    "plt.xlabel('Count Rate [ct/s]')\n",
+    "plt.xlabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')))\n",
     "plt.legend()"
    ]
   },
@@ -923,7 +937,7 @@
     "\n",
     "The `photutils` package provides a comprehensive toolkit for astronomers to perform aperture photometry, including customizable aperture shapes that allow for more precise photometry and easy photometric correction.\n",
     "\n",
-    "**To continue with this `photutils` tutorial, go on to the [PSF photometry notebook](04_photutils_psf_photometry.ipynb).**"
+    "**To continue with this `photutils` tutorial, go on to the [PSF photometry notebook](../04_psf_photometry/04_psf_photometry.ipynb).**"
    ]
   },
   {
@@ -941,7 +955,7 @@
    "source": [
     "---\n",
     "## About this Notebook\n",
-    "**Authors:** Lauren Chambers (lchambers@stsci.edu), Erik Tollerud (etollerud@stsci.edu), Clare Shanahan (cshanahan@stsci.edu)\n",
+    "**Authors:** Lauren Chambers (lchambers@stsci.edu), Erik Tollerud (etollerud@stsci.edu), Tom Wilson (towilson@stsci.edu) Clare Shanahan (cshanahan@stsci.edu)\n",
     "<br>**Updated:** May 2019"
    ]
   },
@@ -970,7 +984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
