--- a/notebooks/photutils/02_source_detection/02_source_detection.ipynb
+++ b/notebooks/photutils/02_source_detection/02_source_detection.ipynb
@@ -34,7 +34,7 @@
     "##### Which data are used in this tutorial?\n",
     "We will be manipulating Hubble eXtreme Deep Field (XDF) data, which was collected using the Advanced Camera for Surveys (ACS) on Hubble between 2002 and 2012. The image we use here is the result of 1.8 million seconds (500 hours!) of exposure time, and includes some of the faintest and most distant galaxies that have ever been observed. \n",
     "\n",
-    "##### The methods demonstrated here are available in narrative form within the `photutils.detection` [documentation](http://photutils.readthedocs.io/en/stable/detection.html) and `photutils.segmentation` [documentation](http://photutils.readthedocs.io/en/stable/segmentation.html)."
+    "*The methods demonstrated here are available in narrative form within the `photutils.detection` [documentation](http://photutils.readthedocs.io/en/stable/detection.html) and `photutils.segmentation` [documentation](http://photutils.readthedocs.io/en/stable/segmentation.html).*"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's also define some `matplotlib` parameters, such as title font size and the dpi, to make sure our plots look nice. To make it quick, we'll do this by loading a [style file shared with the other photutils tutorials](photutils_notebook_style.mplstyle) into `pyplot`. We will use this style file for all the notebook tutorials. (See [here](https://matplotlib.org/users/customizing.html) to learn more about customizing `matplotlib`.)"
+    "Let's also define some `matplotlib` parameters, such as title font size and the dpi, to make sure our plots look nice. To make it quick, we'll do this by loading a [style file shared with the other photutils tutorials](../photutils_notebook_style.mplstyle) into `pyplot`. We will use this style file for all the notebook tutorials. (See [here](https://matplotlib.org/users/customizing.html) to learn more about customizing `matplotlib`.)"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.style.use('photutils_notebook_style.mplstyle')"
+    "plt.style.use('../photutils_notebook_style.mplstyle')"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As explained in the [previous notebook](01_photutils_background_estimation.ipynb) on background estimation, it is important to **mask** these data, as a large portion of the values are equal to zero. We will mask out the non-data portions of the image array, so all of those pixels that have a value of zero don't interfere with our statistics and analyses of the data. "
+    "As explained in a [previous notebook](../01_background_estimation/01_background_estimation.ipynb) on background estimation, it is important to **mask** these data, as a large portion of the values are equal to zero. We will mask out the non-data portions of the image array, so all of those pixels that have a value of zero don't interfere with our statistics and analyses of the data. "
    ]
   },
   {
@@ -465,15 +465,15 @@
     "\n",
     "The answer comes down to the default settings for the two algorithms: (1) there are differences in the upper and lower bounds on the requirements for source roundness and sharpness, and (2) `IRAFStarFinder` includes a minimum separation between sources that `DAOStarFinder` does not have:\n",
     "\n",
-    "|      | `IRAFStarFinder`   | `DAOStarFinder`   |\n",
-    "|------|------|------|\n",
-    "|   sharplo  |   0.5 |  0.2  |\n",
-    "|   sharphi  |  2.0  | 1.0   |\n",
-    "|   roundlo  |  0.0  |  -1.0  |\n",
-    "|   roundhi  | 0.2   |   1.0 |\n",
+    "|  &nbsp;        | `IRAFStarFinder`   | `DAOStarFinder`   |\n",
+    "|----------------|-------|------|\n",
+    "|   sharplo      |   0.5 |  0.2  |\n",
+    "|   sharphi      |  2.0  | 1.0   |\n",
+    "|   roundlo      |  0.0  |  -1.0  |\n",
+    "|   roundhi      | 0.2   |   1.0 |\n",
     "|   minsep_fwhm  | 1.5 * FWHM   |   N/A |\n",
     "\n",
-    "Thinking about this, *it then makes sense* that `IRAFStarFinder` would find fewer sources. It has stricter restrictions on source roundness, meaning that it eliminates  more elliptical galactic sources (this is the eXtreme Deep Field, after all!), and the minimum separation requirement further rules out sources that are too close to one another.\n",
+    "Thinking about this, *it then makes sense* that `IRAFStarFinder` would find fewer sources. It has tighter restrictions on source roundness and ``sharplo``, meaning that it eliminates  more elliptical galactic sources (this is the eXtreme Deep Field, after all!), and the minimum separation requirement further rules out sources that are too close to one another.\n",
     "\n",
     "If we set all these parameters to be equivalent, though, we should find much better agreement between the two methods:"
    ]
@@ -555,7 +555,7 @@
    "source": [
     "For more general source detection cases that do not require comparison with models, `photutils` offers the `find_peaks` function. \n",
     "\n",
-    "This function simply finds sources by identifying local maxima above a given threshold and separated by a given distance, rather than trying to fit data to a given model. Unlike the previous detection algorithms, `find_peaks` does not necessarily calculate objects' centroids. Unless the `subpixel` argument is set to `True`, `find_peaks` will return just the integer value of the peak pixel for each source.\n",
+    "This function simply finds sources by identifying local maxima above a given threshold and separated by a given distance, rather than trying to fit data to a given model. Unlike the previous detection algorithms, `find_peaks` does not necessarily calculate objects' centroids. Unless the `centroid_func` argument is passed a function like `photutils.centroids.centroid_2dg` that can handle source position centroiding, `find_peaks` will return just the integer value of the peak pixel for each source.\n",
     "\n",
     "This algorithm is particularly useful for identifying non-stellar sources or heavily distorted sources in image data.\n",
     "\n",
@@ -568,7 +568,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils import find_peaks"
+    "from photutils import find_peaks\n",
+    "from photutils.centroids import centroid_2dg"
    ]
   },
   {
@@ -578,7 +579,8 @@
    "outputs": [],
    "source": [
     "sources_findpeaks = find_peaks(xdf_image.data, mask=xdf_image.mask, \n",
-    "                               threshold=20.*std, box_size=30, subpixel=True)    \n",
+    "                               threshold=20.*std, box_size=30, \n",
+    "                               centroid_func=centroid_2dg)    \n",
     "print(sources_findpeaks)"
    ]
   },
@@ -659,7 +661,7 @@
    "source": [
     "print('''DAOStarFinder: {} sources\n",
     "IRAFStarFinder: {} sources\n",
-    "find_peaks: {} sources'''.format(len(sources_dao), len(sources_iraf), len(sources_findpeaks)))"
+    "find_peaks: {} sources'''.format(len(sources_dao), len(sources_iraf_match), len(sources_findpeaks)))"
    ]
   },
   {
@@ -679,13 +681,13 @@
    "source": [
     "# Make lists of centroid coordinates\n",
     "centroids_dao = [(x, y) for x, y in sources_dao['xcentroid', 'ycentroid']]\n",
-    "centroids_iraf = [(x, y) for x, y in sources_iraf['xcentroid', 'ycentroid']]\n",
+    "centroids_iraf = [(x, y) for x, y in sources_iraf_match['xcentroid', 'ycentroid']]\n",
     "centroids_findpeaks = [(x, y) for x, y in sources_findpeaks['x_centroid', 'y_centroid']]\n",
     "\n",
-    "# Round those coordinates to the first decimal place and convert them to be sets\n",
-    "rounded_centroids_dao = set([(round(x, 1), round(y, 1)) for x, y in centroids_dao])\n",
-    "rounded_centroids_iraf = set([(round(x, 1), round(y, 1)) for x, y in centroids_iraf])\n",
-    "rounded_centroids_findpeaks = set([(round(x, 1), round(y, 1)) for x, y in centroids_findpeaks])\n",
+    "# Round those coordinates to the ones place and convert them to be sets\n",
+    "rounded_centroids_dao = set([(round(x, 0), round(y, 0)) for x, y in centroids_dao])\n",
+    "rounded_centroids_iraf = set([(round(x, 0), round(y, 0)) for x, y in centroids_iraf])\n",
+    "rounded_centroids_findpeaks = set([(round(x, 0), round(y, 0)) for x, y in centroids_findpeaks])\n",
     "\n",
     "# Examine the intersections of different sets to determine which sources are shared\n",
     "all_match = rounded_centroids_dao.intersection(rounded_centroids_iraf).intersection(rounded_centroids_findpeaks)\n",
@@ -721,18 +723,18 @@
     "# Plot the data\n",
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), norm=norm_image)\n",
     "ax1.scatter([x for x, y in list(dao_findpeaks_match)], [y for x, y in list(dao_findpeaks_match)],\n",
-    "            s=30, marker='s', lw=1.5,  facecolor='None', edgecolor='#EE7733',\n",
+    "            s=30, marker='s', lw=1,  facecolor='None', edgecolor='#EE7733',\n",
     "            label='Found by DAO \\& find\\_peaks')\n",
     "ax1.scatter([x for x, y in list(dao_iraf_match)], [y for x, y in list(dao_iraf_match)],\n",
-    "            s=30, marker='D', lw=1.5, facecolor='None', edgecolor='#EE3377',\n",
+    "            s=30, marker='D', lw=1, facecolor='None', edgecolor='#EE3377',\n",
     "            label='Found by DAO \\& IRAF')\n",
     "ax1.scatter([x for x, y in list(iraf_findpeaks_match)], [y for x, y in list(iraf_findpeaks_match)],\n",
-    "            s=30, marker='o', lw=1.5, facecolor='None', edgecolor='#0077BB',\n",
+    "            s=30, marker='o', lw=1, facecolor='None', edgecolor='#0077BB',\n",
     "            label='Found by IRAF \\& find\\_peaks')\n",
     "ax1.scatter([x for x, y in list(all_match)], [y for x, y in list(all_match)],\n",
     "            s=30, marker='o', lw=1.2, linestyle=':',facecolor='None', edgecolor='#BBBBBB',\n",
     "            label='Found by all methods')\n",
-    "ax1.legend()\n",
+    "ax1.legend(ncol=2)\n",
     "\n",
     "# Define the colorbar\n",
     "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
@@ -1045,7 +1047,7 @@
     "\n",
     "The `photutils` package provides users with a variety of methods for detecting sources in their data, from familar algorithms such as `DAOFind` and `starfind`, to more complex and customizable image segmentation algorithms. These methods allow for easy creation of a diverse array of apertures that can be used for photometric analysis.\n",
     "\n",
-    "**To continue with this `photutils` tutorial, go on to the [aperture photometry](03_photutils_aperture_photometry.ipynb) or [PSF photometry notebook](04_photutils_psf_photometry.ipynb).**"
+    "**To continue with this `photutils` tutorial, go on to the [aperture photometry](../03_aperture_photometry/03_aperture_photometry.ipynb) or [PSF photometry notebook](../04_psf_photometry/04_psf_photometry.ipynb).**"
    ]
   },
   {
