Fixes so HTML renders correctly
(cherry picked from commit ef462b5daea49dc53fcae39759d93f43a5e23d62)

--- a/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
+++ b/notebooks/photutils/01_background_estimation/01_background_estimation.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "<a id=\"title_ID\"></a>\n",
     "\n",
-    "[\n",
-    "<img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300>\n",
-    "](http://photutils.readthedocs.io/en/stable/index.html)\n",
+    "<a href=\"http://photutils.readthedocs.io/en/stable/index.html\"><img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300></a>\n",
     "\n",
     "# Background Estimation with `photutils`\n",
     "---"
@@ -42,13 +40,13 @@
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "\n",
-    "**Note:** This notebook focuses on global background estimation. Local background subtraction with **annulus apertures** is demonstrated in the [aperture photometry notebook](../03_aperture_photometry/03_aperture_photometry.ipynb).\n",
+    "<b>Note:</b> This notebook focuses on <i>global background estimation</i>. Local background subtraction with <i>annulus apertures</i> is demonstrated in the <a href=\"../03_aperture_photometry/03_aperture_photometry.ipynb\">aperture photometry notebook</a>.\n",
     "\n",
     "</div>\n",
     "\n",
     "<div class=\"alert alert-block alert-warning\">\n",
     "    \n",
-    " **Important:** Before proceeding, please be sure to update your versions of `astropy`, `matplotlib`, and `photutils`, or this notebook may not work properly. Or, if you don't want to handle packages individually, you can always use (and keep updated!) the [AstroConda](https://astroconda.readthedocs.io) distribution.\n",
+    "<b>Important:</b> Before proceeding, please be sure to update your versions of <code>astropy</code>, <code>matplotlib</code>, and <code>photutils</code>, or this notebook may not work properly. Or, if you don't want to handle packages individually, you can always use (and keep updated!) the <a href=\"https://astroconda.readthedocs.io\">AstroConda</a> distribution.\n",
     " \n",
     "</div>\n",
     "\n",
