--- a/notebooks/photutils/02_source_detection/02_source_detection.ipynb
+++ b/notebooks/photutils/02_source_detection/02_source_detection.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "<a id=\"title_ID\"></a>\n",
     "\n",
-    "[\n",
-    "<img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300>\n",
-    "](http://photutils.readthedocs.io/en/stable/index.html)\n",
+    "<a href=\"http://photutils.readthedocs.io/en/stable/index.html\"><img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300></a>\n",
     "\n",
     "\n",
     "# Source Detection with `photutils`\n",
@@ -42,9 +40,9 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "\n",
-    "**Important:** Before proceeding, please be sure to update your versions of `astropy`, `matplotlib`, and `photutils`, or this notebook may not work properly. Or, if you don't want to handle packages individually, you can always use (and keep updated!) the [AstroConda](https://astroconda.readthedocs.io) distribution.\n",
-    "\n",
+    "    \n",
+    "<b>Important:</b> Before proceeding, please be sure to update your versions of <code>astropy</code>, <code>matplotlib</code>, and <code>photutils</code>, or this notebook may not work properly. Or, if you don't want to handle packages individually, you can always use (and keep updated!) the <a href=\"https://astroconda.readthedocs.io\">AstroConda</a> distribution.\n",
+    " \n",
     "</div>\n",
     "\n",
     "---"
@@ -336,7 +334,7 @@
     "\n",
     "<h3>Exercises:</h3><br>\n",
     "\n",
-    "Re-run the `DAOStarFinder` algorithm with a smaller threshold (like 5&sigma;), and plot the sources that it finds. Do the same, but with a larger threshold (like 100&sigma;). How did changing the threshold affect the results?\n",
+    "Re-run the <code>DAOStarFinder</code> algorithm with a smaller threshold (like 5&sigma;), and plot the sources that it finds. Do the same, but with a larger threshold (like 100&sigma;). How did changing the threshold affect the results?\n",
     "\n",
     "</div>"
    ]
@@ -445,7 +443,7 @@
     "\n",
     "<h3>Exercises:</h3><br>\n",
     "\n",
-    "Re-run the `IRAFStarFinder` algorithm with a smaller full-width-half-max (FWHM) – try 3 pixels – and plot the sources that it finds. Do the same, but with a larger FWHM (like 10 pixels). How did changing the FWHM affect the results? What astronomical objects might be better captures by smaller FWHM? Larger?\n",
+    "Re-run the <code>IRAFStarFinder</code> algorithm with a smaller full-width-half-max (FWHM) – try 3 pixels – and plot the sources that it finds. Do the same, but with a larger FWHM (like 10 pixels). How did changing the FWHM affect the results? What astronomical objects might be better captures by smaller FWHM? Larger?\n",
     "\n",
     "</div>"
    ]
@@ -910,7 +908,7 @@
     "\n",
     "<h3>Exercises:</h3><br>\n",
     "\n",
-    "Recompute the `SegmentationImage`, but alter the threshold and the minimum number of pixels in a source. How does changing the threshold affect the results? What about changing the number of pixels?\n",
+    "Recompute the <code>SegmentationImage</code>, but alter the threshold and the minimum number of pixels in a source. How does changing the threshold affect the results? What about changing the number of pixels?\n",
     "\n",
     "</div>"
    ]
@@ -1026,7 +1024,7 @@
     "\n",
     "<h3>Exercises:</h3><br>\n",
     "\n",
-    "Play with the isophotal extent of the elliptical apertures (defined above as `r`). Observe how changing this value affects the apertures that are created.\n",
+    "Play with the isophotal extent of the elliptical apertures (defined above as <code>r</code>). Observe how changing this value affects the apertures that are created.\n",
     "\n",
     "</div>"
    ]
