--- a/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
+++ b/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "<a id=\"title_ID\"></a>\n",
     "\n",
-    "[\n",
-    "<img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300>\n",
-    "](http://photutils.readthedocs.io/en/stable/index.html)\n",
+    "<a href=\"http://photutils.readthedocs.io/en/stable/index.html\"><img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300></a>\n",
     "\n",
     "# Aperture Photometry with `photutils`\n",
     "---"
@@ -43,9 +41,9 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "\n",
-    "**Important:** Before proceeding, please be sure to install or update your [AstroConda](https://astroconda.readthedocs.io) distribution. This notebook may not work properly with older versions of AstroConda.\n",
-    "\n",
+    "    \n",
+    "<b>Important:</b> Before proceeding, please be sure to update your versions of <code>astropy</code>, <code>matplotlib</code>, and <code>photutils</code>, or this notebook may not work properly. Or, if you don't want to handle packages individually, you can always use (and keep updated!) the <a href=\"https://astroconda.readthedocs.io\">AstroConda</a> distribution.\n",
+    " \n",
     "</div>\n",
     "\n",
     "---"
@@ -226,6 +224,7 @@
    "metadata": {},
    "source": [
     "With `photutils`, users can create apertures with the following shapes:\n",
+    "\n",
     "<img src=\"https://dl.boxcloud.com/api/2.0/internal_files/460791262443/versions/487657258443/representations/png_paged_2048x2048/content/1.png?access_token=1!mK2E1OiuUdXBeQpFm1fs2aEIHI4qAiRuDMxlpoH0Ng8FDqBkDzcixwbHAe87KVv5VwoFt4yZRT6Yefdjr_F41vW1n7ORLBDGPcB_4ULHfTLeu7ADmrKwMuqbz3GOf4he8KsIxOKl9z_SuxTmpxp2uGFScMLDUEiUYeEiEgTYkmhCIoVT1OiEkRAzLyUhHIMIscm83ZN8CMgSEZWjxlr3e5fvbAediNGoKR6nJGmCGgj4Daa_ua3RozSw22PbW9uxe8CL79VpVzSnS3pu_7S2pZdqnJYjk-2RyiJ90paTt3Ow8eWR0BAqSfFkWJ69nD8PlNXFiHZf6M3INmMDk9zn4GgUiDIjh1wFU__9rGxy6iGDtjF6JUuGLjT8OqTrTWvf6A3ZE3UzqF12H9Wm_B7LgTE40yQSuBXQGEX88u452kNWoiUsRES4LuS_Rmrw2lxBJd82RW66cO7OYGfSAOyWBjM6l40oqy29cUgfwj2yVdDp2mIL_4Mo9BZLZFN_f8OdxId6VVBEmlK0oKQCEpy-ka0ZjF406_cn0rBu2ABjxIIkihyQ_3zHqs43xdbTj3qFVQ..&box_client_name=box-content-preview&box_client_version=2.8.1\" width=700 alt=\"Examples of circular, elliptical, and rectangular apertures and annuli.\">\n",
     "\n",
     "Each of these can be defined either in pixel coordinates or in celestial coordinates (using a WCS transformation).\n",
@@ -737,7 +736,7 @@
     "\n",
     "<h3>Exercise:</h3><br>\n",
     "\n",
-    "Re-calculate the photometry for these elliptical apertures - or just a subset of them - using the `subpixel` aperture placement method instead of the default `exact` method. How does this affect the count sum calculated for those apertures?\n",
+    "Re-calculate the photometry for these elliptical apertures - or just a subset of them - using the <code>subpixel</code> aperture placement method instead of the default <code>exact</code> method. How does this affect the count sum calculated for those apertures?\n",
     "\n",
     "</div>"
    ]
