--- a/notebooks/photutils/04_psf_photometry/04_psf_photometry.ipynb
+++ b/notebooks/photutils/04_psf_photometry/04_psf_photometry.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "<a id=\"title_ID\"></a>\n",
     "\n",
-    "[\n",
-    "<img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300>\n",
-    "](http://photutils.readthedocs.io/en/stable/index.html)\n",
+    "<a href=\"http://photutils.readthedocs.io/en/stable/index.html\"><img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300></a>\n",
     "\n",
     "# PSF Photometry with `photutils`\n",
     "---"
@@ -46,9 +44,9 @@
     "</div>\n",
     "\n",
     "<div class=\"alert alert-block alert-warning\">\n",
-    "\n",
-    "**Important:** Before proceeding, please be sure to install or update your [AstroConda](https://astroconda.readthedocs.io) distribution. This notebook may not work properly with older versions of AstroConda.\n",
-    "\n",
+    "    \n",
+    "<b>Important:</b> Before proceeding, please be sure to update your versions of <code>astropy</code>, <code>matplotlib</code>, and <code>photutils</code>, or this notebook may not work properly. Or, if you don't want to handle packages individually, you can always use (and keep updated!) the <a href=\"https://astroconda.readthedocs.io\">AstroConda</a> distribution.\n",
+    " \n",
     "</div>\n",
     "\n",
     "---"
